--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -56,4 +56,11 @@
     rel="stylesheet"
     href="https://fonts.googleapis.com/icon?family=Material+Icons"
   />
+  <!-- material ui -->
+  <link
+    href="//cdn.muicss.com/mui-0.10.1/css/mui.min.css"
+    rel="stylesheet"
+    type="text/css"
+    media="screen"
+  />
 </html>
