finished redirect to selectmealsplan after sign up

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,6 +18,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.8.2/css/bulma.css"
+    />
     <link rel="apple-touch-icon" href="ptyd.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
