Added google analytics

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-165301097-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "UA-165301097-1");
+    </script>
     <meta charset="utf-8" />
     <link rel="icon" href="ptyd.png" />
     <title>Prep to Your Door | Organic Meal Prep</title>
