added isSignIn and disable to false for google sign in

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- google login -->
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta
+      name="333899878721"
+      content="333899878721-tc2a70pn73hjcnegh2cprvqteiuu39h9.apps.googleusercontent.com"
+    />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
